<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.95"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#DD2C00"
                android:text="@string/clear"
                android:textColor="#ffffff"
                android:textSize="24sp" />


            <Button
                android:id="@+id/button24"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/pharentheses"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button23"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/exponent"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button22"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button29"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button28"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button27"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button26"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button33"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button32"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button31"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button30"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/subtract"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button37"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button36"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button35"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button34"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/add"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button41"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/plusMinus"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button40"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/zero"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button39"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/point"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/button38"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:text="@string/equals"
                android:background="@drawable/circle"
                android:textColor="#ffffff"
                android:layout_margin="5dp"
                android:textSize="24sp"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#43A047"/>

</androidx.constraintlayout.widget.ConstraintLayout>